# AE-AIS

./: .gitignore  DATA_ADAPTATION_PLAN.md  EXTERNAL_VALIDITY_HANDOFF.md  README.md  RESEARCH_PLAN.md  SSL-VTC_implementation.md  pyproject.toml
configs/: danishais2019.yaml  danishais2019_inclusive.yaml  default.yaml  fullus2019.yaml  fullus2019_inclusive.yaml  fullus2019_inclusive_cnorm.yaml  gulf2019.yaml  gulf2019_storage.yaml  nyharbor.yaml  smoke.yaml
overleaf/: iaria.cls  ieee-comp.cbx  main.tex  refs.bib
paper/: PAPER_FULL.md  PAPER_HANDOFF.md  PAPER_IDEA_SIMPLE.md  external_validity_danish.csv  finding1_selection_bias.md  finding2_leakage_audit.md  finding3_reproducibility.md  make_figures.py
scripts/: _consequence_danish_A.py  _consequence_danish_B.py  _merge_danish_results.py  _watchdog_A.sh  _watchdog_B.sh  _watchdog_grid_danish.sh  _watchdog_vae_danish.sh  consequence_danish.py  consequence_experiment.py  diag_supervised.py  download_danish_ais.py  gate_faithful.py  grid_A_cnorm.py  grid_perclass_danish.py  grid_perclass_experiment.py  ingest_danish.py  load_genais.py  make_synthetic.py  mnar_danish_ais.py  plot_trajectories.py  run_danish_chain.sh  run_danish_experiment.sh  run_full.sh  run_master_chain.sh  run_phase1_chain.sh  slurm_sslvtc.sh  static_reporting_danish.py  static_reporting_stats.py  sweep_static_bins.py  tag_static_complete.py  vae_collapse.py  vae_collapse_danish.py
src/sslvtc/: __init__.py  augmentations.py  baselines.py  cli.py  config.py  dataset.py  device.py  download.py  encoding.py  experiments.py  (+10 more)
tests/: test_pipeline.py
